--- a/energie-interne.html
+++ b/energie-interne.html
@@ -1,116 +1,25 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8">
-<title>Travail et énergie interne</title>
+<div class="sim">
+<b>🎥 Vidéo interactive – Effets du travail d’une force</b><br><br>
 
-<style>
-body{margin:0;font-family:Arial;background:#f4f6f8;line-height:1.6;}
-header{background:#003366;color:#fff;padding:25px;text-align:center;}
-main{max-width:1100px;margin:auto;background:#fff;padding:40px;}
-section{margin-bottom:60px;}
-h2{color:#003366;}
-h3{color:#005599;}
-.box{background:#eef3f8;padding:18px;border-left:4px solid #003366;margin:15px 0;}
-.sim{background:#fafafa;border:1px solid #ccc;padding:20px;margin-top:15px;}
-canvas{border:1px solid #999;background:#fff;}
-footer{background:#003366;color:#fff;text-align:center;padding:12px;margin-top:40px;}
-</style>
-</head>
+<iframe width="100%" height="360"
+src="https://www.youtube.com/embed/1w4H5JYx1Xk"
+title="Effets du travail mécanique"
+frameborder="0"
+allowfullscreen>
+</iframe>
 
-<body>
-
-<header>
-<h1>Travail et énergie interne</h1>
-<p>1ʳᵉ Bac – Sciences expérimentales & Sciences mathématiques</p>
-</header>
-
-<main>
-
-<!-- I -->
-<section>
-<h2>I – Effets du travail d’une force</h2>
 <div class="box">
-Observer comment le travail mécanique modifie l’état d’un système.
+<b>Objectif d’observation :</b><br>
+Observer comment le travail d’une force peut provoquer une déformation
+ou modifier l’état énergétique d’un système.
 </div>
 
-<div class="sim">
-<b>Simulation – Déformation d’un objet élastique</b><br><br>
-<canvas id="def" width="400" height="120"></canvas>
+<div class="box">
+<b>Questions pour guider l’observation :</b>
+<ul>
+<li>Que fait l’agent mécanique sur le système ?</li>
+<li>Quel changement observable apparaît ?</li>
+<li>Quelle forme d’énergie est mise en jeu ?</li>
+</ul>
 </div>
-
-<div class="sim">
-<b>Simulation – Frottement et agitation microscopique</b><br><br>
-<canvas id="frot" width="400" height="120"></canvas>
 </div>
-</section>
-
-<!-- II -->
-<section>
-<h2>II – Énergie interne d’un système</h2>
-
-<h3>2.2 Énergies cinétiques microscopiques</h3>
-<div class="sim">
-<b>Simulation – Agitation microscopique</b><br><br>
-<canvas id="microK" width="400" height="120"></canvas>
-</div>
-
-<h3>2.3 Énergies potentielles microscopiques</h3>
-<div class="sim">
-<b>Simulation – Interactions microscopiques</b><br><br>
-<canvas id="microP" width="400" height="120"></canvas>
-</div>
-</section>
-
-<!-- III -->
-<section>
-<h2>III – Échange d’énergie au cours d’une transformation</h2>
-<div class="sim">
-<b>Simulation – Système recevant ou cédant de l’énergie</b><br><br>
-<canvas id="exchange" width="400" height="120"></canvas>
-</div>
-</section>
-
-<!-- IV -->
-<section>
-<h2>IV – Premier principe de la thermodynamique</h2>
-<div class="sim">
-<b>Simulation – Bilan énergétique simplifié</b><br><br>
-<canvas id="balance" width="400" height="120"></canvas>
-</div>
-</section>
-
-</main>
-
-<footer>
-<p>Plateforme pédagogique – Simulations des concepts d’énergie</p>
-</footer>
-
-<script>
-// Déformation
-const d=document.getElementById("def").getContext("2d");
-for(let i=0;i<8;i++){d.beginPath();d.arc(80+i*30,60,6,0,Math.PI*2);d.fill();}
-
-// Frottement
-const f=document.getElementById("frot").getContext("2d");
-for(let i=0;i<12;i++){f.beginPath();f.arc(200+Math.random()*20,60+Math.random()*20,5,0,Math.PI*2);f.fill();}
-
-// Agitation
-const k=document.getElementById("microK").getContext("2d");
-for(let i=0;i<12;i++){k.beginPath();k.arc(60+Math.random()*280,30+Math.random()*60,5,0,Math.PI*2);k.fill();}
-
-// Interactions
-const p=document.getElementById("microP").getContext("2d");
-for(let i=0;i<10;i++){p.beginPath();p.arc(80+i*25,60,6,0,Math.PI*2);p.fill();}
-
-// Échange
-const e=document.getElementById("exchange").getContext("2d");
-e.fillRect(50,40,80,40); e.fillRect(270,40,80,40);
-
-// Bilan
-const b=document.getElementById("balance").getContext("2d");
-b.fillText("Énergie reçue = variation d'énergie",80,60);
-</script>
-
-</body>
-</html>
