--- a/energie-interne.html
+++ b/energie-interne.html
@@ -1,25 +1,19 @@
 <div class="sim">
 <b>🎥 Vidéo interactive – Effets du travail d’une force</b><br><br>
 
-<iframe width="100%" height="360"
-src="https://www.youtube.com/embed/1w4H5JYx1Xk"
-title="Effets du travail mécanique"
-frameborder="0"
-allowfullscreen>
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/8n9w7c2E6WQ"
+  title="Travail et énergie interne"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
 </iframe>
 
 <div class="box">
 <b>Objectif d’observation :</b><br>
 Observer comment le travail d’une force peut provoquer une déformation
-ou modifier l’état énergétique d’un système.
-</div>
-
-<div class="box">
-<b>Questions pour guider l’observation :</b>
-<ul>
-<li>Que fait l’agent mécanique sur le système ?</li>
-<li>Quel changement observable apparaît ?</li>
-<li>Quelle forme d’énergie est mise en jeu ?</li>
-</ul>
+ou une variation de l’énergie interne.
 </div>
 </div>
